fix spacing issue with main image on main page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,6 +67,16 @@ a:active {
 	margin-top: 10px;
 }
 
+.centerized {
+	display: block;
+	width: 100%;
+	margin: 0 auto;
+}
+
+.main-image {
+	max-width: 900px;
+}
+
 .thumbnail {
 	margin: 0;
 	border: none;
